# afterlife

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  demo.tape  pyproject.toml
.github/workflows/: afterlife.yml
demo/: README.md  allowlist.yaml  run.py
docs/: ARCHITECTURE.md  DETECTIONS.md  INTERVIEW_TALK_TRACK.md  PLAYBOOK.md  RECORDING.md  SCREENSHOTS.md
docs/blog/: the-graph-layer.md
src/afterlife/: allowlist.py  cli.py  config.py  db.py  models.py  scan_runs.py
src/afterlife/collectors/: aws.py  azure_entra.py  base.py  gcp_iam.py  github.py  gitlab.py  google_workspace.py  idp.py  okta.py  slack.py  vault.py
src/afterlife/graph/: __init__.py  identity_graph.py
src/afterlife/reporting/: html_report.py  json_report.py  pdf_report.py  sarif_report.py
src/afterlife/rules/: admin_concentration.py  admin_without_mfa.py  base.py  cross_account_trust.py  inactive_admin.py  never_used.py  offboarded_owner.py  orphaned_identity.py  outside_collab_with_aws.py  registry.py  stale_deploy_key_write.py  unrotated_key.py  unused_credential.py
src/afterlife/scoring/: blast_radius.py
src/afterlife/web/: app.py  (+2 more)
tests/: conftest.py  test_allowlist.py  test_aws_collector.py  test_azure_entra_collector.py  test_blast_radius.py  test_gcp_iam_collector.py  test_github_collector.py  test_gitlab_collector.py  test_google_workspace_collector.py  test_html_report.py  test_identity_graph.py  test_okta_collector.py  test_pdf_report.py  test_rules.py  test_sarif_report.py  test_scan_runs.py  test_slack_collector.py  test_vault_collector.py  test_web.py
(+14 files in other folders)
