[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "afterlife"
version = "0.1.0"
description = "Surface credentials that outlive their owners — a ghost-access auditor."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["security", "iam", "audit", "credentials", "ghost-access", "offboarding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "boto3>=1.34",
    "typer>=0.12",
    "rich>=13.7",
    "networkx>=3.2",
    "httpx>=0.27",
    "python-dateutil>=2.9",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "moto>=5.0",
    "freezegun>=1.5",
    "respx>=0.21",
]

[project.scripts]
afterlife = "afterlife.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/afterlife"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
